Add 'contact__information' class on contact page and  add margin for it in style.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -259,6 +259,10 @@ button:active,
   justify-content: center;
 }
 
+.contact__information {
+  margin: 30px auto;
+}
+
 #contact-form {
   display: flex;
   flex-direction: column;
