--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ body {
   font-size: var(--font-size-normal);
   color: var(--text-color);
   line-height: 1.6;
+  min-height: 100vh;
 }
 
 h1 {
@@ -287,6 +288,8 @@ button:active,
   display: flex;
   flex-direction: column;
   text-align: center;
+  position: sticky;
+  top: 100%;
 }
 
 /* Media queries */
