--- a/css/styles.css
+++ b/css/styles.css
@@ -143,19 +143,20 @@ button:active,
 
 /* Profile Index Page */
 .profile {
-  max-width: 700px;
-  margin: 0 auto;
+  max-width: 800px;
+  margin: 15vh auto;
 }
 
 .profile__portrait {
   float: left;
   width: 250px;
-  margin-right: 40px;
+  margin-right: 50px;
   border-radius: 50%;
 }
 
 .profile__text {
   flex: 1 1 100px;
+  padding: 15px;
 }
 
 .sun {
