--- a/css/style.production.css
+++ b/css/style.production.css
@@ -404,7 +404,7 @@ button:active {
   flex-grow: 0;
   -ms-flex-negative: 1;
   flex-shrink: 1;
-  max-width: 20%;
+  max-width: 120px;
   margin: 15px 0;
 }
 
