--- a/css/style.production.css
+++ b/css/style.production.css
@@ -45,9 +45,7 @@ a {
   -webkit-text-decoration: underline transparent;
   text-decoration: underline transparent;
   -webkit-transition: -webkit-text-decoration 0.3s ease;
-  transition: -webkit-text-decoration 0.3s ease;
   -o-transition: text-decoration 0.3s ease;
-  transition: text-decoration 0.3s ease;
   transition: text-decoration 0.3s ease, -webkit-text-decoration 0.3s ease;
 }
 
@@ -92,14 +90,9 @@ button {
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
 
   /* transition */
-  -webkit-transition: opacity 0.5s;
-  -o-transition: opacity 0.5s;
-  transition: opacity 0.5s;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
-  -o-transition: transform 0.3s;
-  transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
+  -webkit-transition: opacity 0.5s, -webkit-transform 0.3s;
+  -o-transition: transform 0.3s, opacity 0.5s;
+  transition: transform 0.3s, -webkit-transform 0.3s, opacity 0.5s;
   -webkit-transition-timing-function: ease-in-out;
   -o-transition-timing-function: ease-in-out;
   transition-timing-function: ease-in-out;
@@ -126,14 +119,9 @@ button {
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
 
   /* transition */
-  -webkit-transition: opacity 0.5s;
-  -o-transition: opacity 0.5s;
-  transition: opacity 0.5s;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
-  -o-transition: transform 0.3s;
-  transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
+  -webkit-transition: -webkit-transform 0.3s, opacity 0.5s;
+  -o-transition: transform 0.3s, opacity 0.5s;
+  transition: transform 0.3s, -webkit-transform 0.3s, opacity 0.5s;
   -webkit-transition-timing-function: ease-in-out;
   -o-transition-timing-function: ease-in-out;
   transition-timing-function: ease-in-out;
