Add css styling to error message

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -378,6 +378,10 @@ button:active {
   flex-direction: column;
 }
 
+.error-message {
+  color: #f00;
+}
+
 #contact-email,
 #contact-tel,
 #contact-message {
