--- a/css/styles.css
+++ b/css/styles.css
@@ -277,6 +277,10 @@ button:active,
   flex-direction: column;
 }
 
+.error-message {
+  color: red;
+}
+
 #contact-email,
 #contact-tel,
 #contact-message {
