--- a/css/style.production.css
+++ b/css/style.production.css
@@ -7,7 +7,7 @@ text-color (greenish black): #0a0c08
 
 * {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -43,29 +43,31 @@ a {
   color: #4c764c;
   font-weight: 700;
   -webkit-text-decoration: underline transparent;
-  text-decoration: underline transparent;
+          text-decoration: underline transparent;
   -webkit-transition: -webkit-text-decoration 0.3s ease;
+  transition: -webkit-text-decoration 0.3s ease;
   -o-transition: text-decoration 0.3s ease;
+  transition: text-decoration 0.3s ease;
   transition: text-decoration 0.3s ease, -webkit-text-decoration 0.3s ease;
 }
 
 a:hover {
   /* No underlining when hovering over a link */
   -webkit-text-decoration-color: #4c764c;
-  text-decoration-color: #4c764c;
+          text-decoration-color: #4c764c;
 }
 
 a:focus {
   /* No underlining when hovering over a link */
   -webkit-text-decoration-color: #4c764c;
-  text-decoration-color: #4c764c;
+          text-decoration-color: #4c764c;
 }
 
 a:active {
   /* selected link */
   color: #d67d00;
   -webkit-text-decoration-color: #d67d00;
-  text-decoration-color: #d67d00;
+          text-decoration-color: #d67d00;
 }
 
 /* button styling */
@@ -90,14 +92,18 @@ button {
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
 
   /* transition */
-  -webkit-transition: opacity 0.5s, -webkit-transform 0.3s;
-  -o-transition: transform 0.3s, opacity 0.5s;
-  transition: transform 0.3s, -webkit-transform 0.3s, opacity 0.5s;
+  -webkit-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  -o-transition: transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
   -webkit-transition-timing-function: ease-in-out;
-  -o-transition-timing-function: ease-in-out;
-  transition-timing-function: ease-in-out;
+       -o-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
 }
-
 .button {
   /* overwrite browser defaults and resets the border */
   border: none;
@@ -119,12 +125,17 @@ button {
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
 
   /* transition */
-  -webkit-transition: -webkit-transform 0.3s, opacity 0.5s;
-  -o-transition: transform 0.3s, opacity 0.5s;
-  transition: transform 0.3s, -webkit-transform 0.3s, opacity 0.5s;
+  -webkit-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  -o-transition: transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
   -webkit-transition-timing-function: ease-in-out;
-  -o-transition-timing-function: ease-in-out;
-  transition-timing-function: ease-in-out;
+       -o-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
 }
 
 button:hover,
@@ -134,8 +145,8 @@ button:focus,
   cursor: pointer;
   opacity: 0.8;
   -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
   text-decoration: none;
 }
 
@@ -162,14 +173,14 @@ button:active {
 
 .page-header__item {
   -webkit-box-flex: 0;
-  -ms-flex: 0 1 200px;
-  flex: 0 1 200px;
+      -ms-flex: 0 1 200px;
+          flex: 0 1 200px;
 }
 
 .page-header__item:last-child {
   -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   text-align: right;
 }
 
@@ -207,8 +218,8 @@ button:active {
 
 .profile__text {
   -webkit-box-flex: 1;
-  -ms-flex: 1 1 100px;
-  flex: 1 1 100px;
+      -ms-flex: 1 1 100px;
+          flex: 1 1 100px;
   padding: 15px;
 }
 
@@ -224,7 +235,7 @@ button:active {
 
 .sun {
   -webkit-animation: 4s color-change infinite alternate linear;
-  animation: 4s color-change infinite alternate linear;
+          animation: 4s color-change infinite alternate linear;
 }
 
 @-webkit-keyframes color-change {
@@ -257,59 +268,59 @@ button:active {
 
 .cloud-front {
   -webkit-animation: 30s cloud-move infinite alternate linear;
-  animation: 30s cloud-move infinite alternate linear;
+          animation: 30s cloud-move infinite alternate linear;
 }
 
 @-webkit-keyframes cloud-move {
   from {
     -webkit-transform: translate(0, 50px);
-    transform: translate(0, 50px);
+            transform: translate(0, 50px);
   }
 
   to {
     -webkit-transform: translate(200px, 50px);
-    transform: translate(200px, 50px);
+            transform: translate(200px, 50px);
   }
 }
 
 @keyframes cloud-move {
   from {
     -webkit-transform: translate(0, 50px);
-    transform: translate(0, 50px);
+            transform: translate(0, 50px);
   }
 
   to {
     -webkit-transform: translate(200px, 50px);
-    transform: translate(200px, 50px);
+            transform: translate(200px, 50px);
   }
 }
 
 .cloud-back {
   -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
-  animation: 34s cloud-move-reverse infinite alternate linear;
+          animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
 @-webkit-keyframes cloud-move-reverse {
   from {
     -webkit-transform: translate(446px, 48px);
-    transform: translate(446px, 48px);
+            transform: translate(446px, 48px);
   }
 
   to {
     -webkit-transform: translate(100px, 48px);
-    transform: translate(100px, 48px);
+            transform: translate(100px, 48px);
   }
 }
 
 @keyframes cloud-move-reverse {
   from {
     -webkit-transform: translate(446px, 48px);
-    transform: translate(446px, 48px);
+            transform: translate(446px, 48px);
   }
 
   to {
     -webkit-transform: translate(100px, 48px);
-    transform: translate(100px, 48px);
+            transform: translate(100px, 48px);
   }
 }
 
@@ -330,6 +341,30 @@ button:active {
 .project-list__item {
   display: inline-block;
   width: 33%;
+  padding: 10px;
+}
+
+.project-list__item img{
+  width: 100%;
+  -webkit-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+  -webkit-transition: -webkit-box-shadow 0.5s;
+  transition: -webkit-box-shadow 0.5s;
+  -o-transition: box-shadow 0.5s;
+  transition: box-shadow 0.5s;
+  transition: box-shadow 0.5s, -webkit-box-shadow 0.5s;
+  -webkit-transition-timing-function: ease-in-out;
+       -o-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
+}
+
+.project-list__item img:hover,
+.project-list__item img:focus {
+  cursor: pointer;
+  opacity: 0.9;
+  -webkit-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+          box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 /* end grid fallback */
@@ -348,7 +383,7 @@ button:active {
     background-color: rgba(211, 211, 211, 0.2);
     border-radius: 10px;
     -webkit-box-shadow: 2px 5px 5px 2px rgba(0, 0, 0, 0.1);
-    box-shadow: 2px 5px 5px 2px rgba(0, 0, 0, 0.1);
+            box-shadow: 2px 5px 5px 2px rgba(0, 0, 0, 0.1);
     width: auto;
     min-height: auto;
     margin: 0;
@@ -360,8 +395,8 @@ button:active {
   margin: 0 auto;
   max-width: 50%;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .contact__information {
@@ -374,29 +409,29 @@ button:active {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .error-message {
-  color: #f00;
+  color: red;
 }
 
 #contact-email,
 #contact-tel,
 #contact-message {
   -webkit-box-flex: 0;
-  -ms-flex: 0 1 100px;
-  flex: 0 1 100px;
+      -ms-flex: 0 1 100px;
+          flex: 0 1 100px;
 }
 
 #submit-message {
   -webkit-box-flex: 0;
-  -ms-flex-positive: 0;
-  flex-grow: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
   -ms-flex-negative: 1;
-  flex-shrink: 1;
-  max-width: 120px;
+      flex-shrink: 1;
+  max-width: 20%;
   margin: 15px 0;
 }
 
@@ -408,8 +443,8 @@ button:active {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
   position: sticky;
   top: 100%;
