--- a/css/styles.css
+++ b/css/styles.css
@@ -239,6 +239,21 @@ button:active,
 .project-list__item {
   display: inline-block;
   width: 33%;
+  padding: 10px;
+}
+
+.project-list__item img{
+  width: 100%;
+  transition: opacity 0.5s;
+  transition: box-shadow 0.5s;
+  transition-timing-function: ease-in-out;
+}
+
+.project-list__item img:hover,
+.project-list__item img:focus {
+  cursor: pointer;
+  opacity: 0.9;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 /* end grid fallback */
