--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ text-color (greenish black): #0a0c08
 }
 
 body {
-  background-color: #fff;
+  background-color: #ffffff;
   font-family: var(--font-family-normal);
   font-weight: var(--font-weight-regular);
   font-size: var(--font-size-normal);
@@ -80,8 +80,7 @@ button,
   font-family: inherit;
 
   /* styles the button */
-  background-color: var(--secondary-color);
-  color: #fff;
+  color: var(--secondary-color);
   text-decoration: none;
   font-size: var(--font-size-normal);
   padding: 10px;
@@ -90,10 +89,15 @@ button,
 
   /* width of the border, type, color */
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  border-right: 2px solid rgba(0, 0, 0, 0.3);
+  border-left: 0.3px solid rgba(0, 0, 0, 0.1);
+  border-top: 0.3px solid rgba(0, 0, 0, 0.1);
+
+  letter-spacing: 1.5px;
 
   /* transition */
   transition: opacity 0.5s;
-  transition: transform 0.3s;
+  transition: letter-spacing 0.4s;
   transition-timing-function: ease-in-out;
 }
 
@@ -103,14 +107,16 @@ button:focus,
 .button:focus {
   cursor: pointer;
   opacity: 0.8;
-  transform: scale(1.1);
   text-decoration: none;
 }
 
 button:active,
 .button:active {
   background-color: #fff;
-  border: 2px solid var(--secondary-color);
+  border-top: 2px solid rgba(0, 0, 0, 0.3);
+  border-left: 2px solid rgba(0, 0, 0, 0.3);
+  border-bottom: none;
+  border-right: none;
   color: var(--secondary-color);
 }
 
@@ -118,6 +124,7 @@ button:active,
 .header-container {
   position: sticky;
   top: 0;
+  z-index: 2;
 }
 
 .page-header {
@@ -165,16 +172,21 @@ button:active,
   height: 100vh;
 }
 .profile {
-  max-width: 800px;
-  margin: 15vh auto;
+  max-width: 60%;
+  margin: 10vh auto;
+  display: flex;
+  background-color: rgba(168, 152, 152, 0.09);
+  border-radius: 15px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  padding: 25px;
 }
 
 .profile__portrait {
-  float: left;
-  width: 260px;
+  width: 400px;
   margin-right: 50px;
   padding: 10px;
-  border-radius: 50%;
+  border-radius: 15px;
 }
 
 .profile__text {
@@ -182,6 +194,10 @@ button:active,
   padding: 15px;
 }
 
+.profile__text h1 {
+  font-size: 50px;
+  color: var(--primary-color);
+}
 
 /* Work Page */
 #work {
@@ -324,6 +340,24 @@ button:active,
 }
 
 @media all and (max-width: 750px) {
+  #about {
+    height: 100%;
+  }
+  .profile {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .profile__portrait {
+    margin-right: 0;
+  }
+
+  .profile__text {
+    flex: auto;
+    margin-right: 25%;
+    margin-left: 25%;
+  }
+
   .project-list {
     grid-gap: 15px;
   }
