--- a/css/styles.css
+++ b/css/styles.css
@@ -178,10 +178,10 @@ button:active,
 
 /* Profile Index Page */
 #about {
-  height: 100vh;
+  height: 100%;
 }
 .profile {
-  max-width: 60%;
+  max-width: 80%;
   margin: 10vh auto;
   display: flex;
   background-color: rgba(168, 152, 152, 0.09);
@@ -192,10 +192,11 @@ button:active,
 }
 
 .profile__portrait {
-  width: 400px;
+  width: 500px;
   margin-right: 50px;
   padding: 10px;
   border-radius: 15px;
+  object-fit: cover;
 }
 
 .profile__text {
@@ -208,6 +209,12 @@ button:active,
   color: var(--primary-color);
 }
 
+.profile .button {
+  margin-top: 15%;
+  margin-right: 5px;
+  float: right;
+}
+
 /* Work Page */
 #work {
   height: 100%;
@@ -215,7 +222,7 @@ button:active,
 
 .work {
   max-width: 75%;
-  margin: 0 auto;
+  margin:  20vh auto;
 }
 
 .work h1 {
@@ -269,12 +276,19 @@ button:active,
 /* Contact Page */
 #contact {
   height: 100vh;
+  max-width: 80%;
+  margin: 10vh auto;
   display: flex;
+  background-color: rgba(168, 152, 152, 0.09);
+  border-radius: 15px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  padding: 25px;
 }
 
 .contact {
   margin: 0 auto;
-  max-width: 50%;
+  max-width: 80%;
   align-self: center;
 }
 
@@ -285,28 +299,6 @@ button:active,
 .contact__information {
   margin: 30px auto;
   display: inline-block;
-}
-
-#contact-form {
-  display: flex;
-  flex-direction: column;
-}
-
-.error-message {
-  color: red;
-}
-
-#contact-email,
-#contact-tel,
-#contact-message {
-  flex: 0 1 100px;
-}
-
-#submit-message {
-  flex-grow: 0;
-  flex-shrink: 1;
-  max-width: 20%;
-  margin: 15px 0;
 }
 
 /* Footer */
@@ -349,9 +341,16 @@ button:active,
 }
 
 @media all and (max-width: 750px) {
-  #about {
-    height: 100%;
+  .project-list {
+    grid-gap: 15px;
   }
+
+  h1 {
+    font-size: 22px;
+  }
+}
+
+@media all and (max-width: 1300px) {
   .profile {
     flex-wrap: wrap;
     justify-content: center;
@@ -359,19 +358,11 @@ button:active,
 
   .profile__portrait {
     margin-right: 0;
+    width: 100%;
+    max-width: 700px;
   }
 
   .profile__text {
     flex: auto;
-    margin-right: 25%;
-    margin-left: 25%;
-  }
-
-  .project-list {
-    grid-gap: 15px;
-  }
-
-  h1 {
-    font-size: 22px;
   }
 }
