--- a/css/styles.css
+++ b/css/styles.css
@@ -235,7 +235,7 @@ button:active,
 .project-list__item {
   display: inline-block;
   width: 33%;
-  padding: 10px;
+  padding: 15px;
 }
 
 .project-list__item img{
@@ -258,14 +258,15 @@ button:active,
   .project-list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 25px;
+    grid-gap: 35px;
     margin: 0;
   }
 
   .project-list__item {
-    background-color: rgba(211, 211, 211, 0.2);
-    border-radius: 10px;
-    box-shadow: 2px 5px 5px 2px rgba(0, 0, 0, 0.1);
+    background-color: rgba(168, 152, 152, 0.15);
+    border-radius: 15px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
     width: auto;
     min-height: auto;
     margin: 0;
