--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,4 +1,10 @@
 /*
+* Used:
+* PostCSS
+* Autoprefixer
+*/
+
+/*
 Colors
 primary-color (green): #4c764c
 secondary-color (orange): #d67d00
@@ -8,11 +14,12 @@ text-color (greenish black): #0a0c08
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
-  background-color: #fff;
-  font-family: 'Lato', sans-serif;
+  background-color: #ffffff;
+  font-family: 'Source Sans 3', sans-serif;
   font-weight: 400;
   font-size: 16px;
   color: #0a0c08;
@@ -21,19 +28,19 @@ body {
 }
 
 h1 {
-  font-family: 'Playfair Display', sans-serif;
+  font-family: undefined;
   font-size: 30px;
   font-weight: 700;
 }
 
 h2 {
-  font-family: 'Playfair Display', sans-serif;
+  font-family: undefined;
   font-size: 24px;
   font-weight: 700;
 }
 
 h3 {
-  font-family: 'Playfair Display', sans-serif;
+  font-family: undefined;
   font-size: 18px;
   font-weight: 700;
 }
@@ -65,110 +72,138 @@ a:focus {
 
 a:active {
   /* selected link */
-  color: #d67d00;
-  -webkit-text-decoration-color: #d67d00;
-          text-decoration-color: #d67d00;
+  color: #ffa424;
+  -webkit-text-decoration-color: #ffa424;
+          text-decoration-color: #ffa424;
 }
 
 /* button styling */
-button {
-  /* overwrite browser defaults and resets the border */
-  border: none;
-  display: inline-block;
-
-  /* takes the font from the outer container */
-  font-family: inherit;
-
-  /* styles the button */
-  background-color: #d67d00;
-  color: #fff;
-  text-decoration: none;
-  font-size: 16px;
-  padding: 10px;
-  border-radius: 3px;
-  margin: 10px auto;
-
-  /* width of the border, type, color */
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-
-  /* transition */
-  -webkit-transition: opacity 0.5s;
-  -o-transition: opacity 0.5s;
-  transition: opacity 0.5s;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
-  -o-transition: transform 0.3s;
-  transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
-  -webkit-transition-timing-function: ease-in-out;
-       -o-transition-timing-function: ease-in-out;
-          transition-timing-function: ease-in-out;
-}
+button,
 .button {
   /* overwrite browser defaults and resets the border */
   border: none;
   display: inline-block;
+  color: #000;
 
   /* takes the font from the outer container */
   font-family: inherit;
 
-  /* styles the button */
-  background-color: #d67d00;
-  color: #fff;
-  text-decoration: none;
-  font-size: 16px;
-  padding: 10px;
-  border-radius: 3px;
-  margin: 10px auto;
+  /*styling*/
+  letter-spacing: 1px;
+  padding: 13px 50px 13px;
+  outline: 0;
+  border: 1px solid #000;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+}
 
-  /* width of the border, type, color */
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-
-  /* transition */
-  -webkit-transition: opacity 0.5s;
-  -o-transition: opacity 0.5s;
-  transition: opacity 0.5s;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
-  -o-transition: transform 0.3s;
-  transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
+button::after {
+  content: "";
+  background-color:#ffa424;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
   -webkit-transition-timing-function: ease-in-out;
        -o-transition-timing-function: ease-in-out;
           transition-timing-function: ease-in-out;
+  -webkit-text-decoration: underline transparent;
+          text-decoration: underline transparent;
+}
+
+.button::after {
+  content: "";
+  background-color:#ffa424;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-transition-timing-function: ease-in-out;
+       -o-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
+  -webkit-text-decoration: underline transparent;
+          text-decoration: underline transparent;
 }
 
 button:hover,
 button:focus,
 .button:hover,
 .button:focus {
+  -webkit-text-decoration: underline transparent;
+          text-decoration: underline transparent;
+}
+
+button:hover::after,
+button:focus::after,
+.button:hover::after,
+.button:focus::after {
   cursor: pointer;
-  opacity: 0.8;
-  -webkit-transform: scale(1.1);
-      -ms-transform: scale(1.1);
-          transform: scale(1.1);
   text-decoration: none;
+  top: 0px;
+  left: 0px;
+  -webkit-text-decoration: underline transparent;
+          text-decoration: underline transparent;
 }
 
-button:active {
-  background-color: #fff;
-  border: 2px solid #d67d00;
-  color: #d67d00;
-}
-
+button:active,
 .button:active {
+  color: #000;
+  border: none;
   background-color: #fff;
-  border: 2px solid #d67d00;
-  color: #d67d00;
+  -webkit-text-decoration: underline transparent;
+          text-decoration: underline transparent;
+  -webkit-box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+          box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+}
+
+/* Tag styling */
+.tags {
+  margin-bottom: 15px;
+  min-height: 100px;
+}
+
+.tag {
+  display: inline-block;
+  border-radius: 4px;
+  padding: 3px 10px;
+  background: #808080;
+  color: #ffffff;
+  margin: 5px;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.tag:hover {
+  -webkit-transform: translate(0, -2px);
+      -ms-transform: translate(0, -2px);
+          transform: translate(0, -2px);
 }
 
 /* Header */
+.header-container {
+  position: sticky;
+  top: 0;
+  z-index: 2;
+}
+
 .page-header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
   padding: 20px;
+  background-color: #ffffff;
 }
 
 .page-header__item {
@@ -184,17 +219,23 @@ button:active {
   text-align: right;
 }
 
-.navigation-list__item--active {
-  color: #d67d00;
-}
-
 .navigation-list {
   list-style-type: none;
+}
+
+.navigation-list ul {
+  position: sticky;
+  top: 0;
+  overflow: hidden;
 }
 
 .navigation-list li {
   display: inline-block;
   margin-left: 15px;
+}
+
+.active {
+  color: #ffa424;
 }
 
 #logo {
@@ -203,17 +244,31 @@ button:active {
 }
 
 /* Profile Index Page */
+#about {
+  height: 100%;
+}
 .profile {
-  max-width: 800px;
-  margin: 15vh auto;
+  max-width: 80%;
+  margin: 10vh auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: rgba(168, 152, 152, 0.09);
+  border-radius: 15px;
+  -webkit-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  padding: 25px;
 }
 
 .profile__portrait {
-  float: left;
-  width: 260px;
+  width: 500px;
   margin-right: 50px;
   padding: 10px;
-  border-radius: 50%;
+  border-radius: 15px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .profile__text {
@@ -223,112 +278,25 @@ button:active {
   padding: 15px;
 }
 
-/* About me Page */
-.about {
-  max-width: 700px;
-  margin: 0 auto;
+.profile__text h1 {
+  font-size: 50px;
+  color: #4c764c;
 }
 
-.about__text {
-  text-align: center;
-}
-
-.sun {
-  -webkit-animation: 4s color-change infinite alternate linear;
-          animation: 4s color-change infinite alternate linear;
-}
-
-@-webkit-keyframes color-change {
-  0% {
-    fill: #edc655;
-  }
-
-  50% {
-    fill: #fcffad;
-  }
-
-  100% {
-    fill: #f76414;
-  }
-}
-
-@keyframes color-change {
-  0% {
-    fill: #edc655;
-  }
-
-  50% {
-    fill: #fcffad;
-  }
-
-  100% {
-    fill: #f76414;
-  }
-}
-
-.cloud-front {
-  -webkit-animation: 30s cloud-move infinite alternate linear;
-          animation: 30s cloud-move infinite alternate linear;
-}
-
-@-webkit-keyframes cloud-move {
-  from {
-    -webkit-transform: translate(0, 50px);
-            transform: translate(0, 50px);
-  }
-
-  to {
-    -webkit-transform: translate(200px, 50px);
-            transform: translate(200px, 50px);
-  }
-}
-
-@keyframes cloud-move {
-  from {
-    -webkit-transform: translate(0, 50px);
-            transform: translate(0, 50px);
-  }
-
-  to {
-    -webkit-transform: translate(200px, 50px);
-            transform: translate(200px, 50px);
-  }
-}
-
-.cloud-back {
-  -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
-          animation: 34s cloud-move-reverse infinite alternate linear;
-}
-
-@-webkit-keyframes cloud-move-reverse {
-  from {
-    -webkit-transform: translate(446px, 48px);
-            transform: translate(446px, 48px);
-  }
-
-  to {
-    -webkit-transform: translate(100px, 48px);
-            transform: translate(100px, 48px);
-  }
-}
-
-@keyframes cloud-move-reverse {
-  from {
-    -webkit-transform: translate(446px, 48px);
-            transform: translate(446px, 48px);
-  }
-
-  to {
-    -webkit-transform: translate(100px, 48px);
-            transform: translate(100px, 48px);
-  }
+.profile .button {
+  margin-top: 15%;
+  margin-right: 5px;
+  float: right;
 }
 
 /* Work Page */
+#work {
+  height: 100%;
+}
 
 .work {
   max-width: 75%;
-  margin: 0 auto;
+  margin:  20vh auto;
 }
 
 .work h1 {
@@ -341,7 +309,7 @@ button:active {
 .project-list__item {
   display: inline-block;
   width: 33%;
-  padding: 10px;
+  padding: 15px;
 }
 
 .project-list__item img{
@@ -367,72 +335,82 @@ button:active {
           box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
+.project-list__item p {
+  min-height: 100px;
+}
+
+.project-list__item .button {
+  margin-right: 20px;
+  margin-bottom: 20px;
+  float: right;
+}
+
 /* end grid fallback */
 
 @supports (display: grid) {
   .project-list {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr 25px 1fr 25px 1fr;
+    -ms-grid-columns: 1fr 45px 1fr 45px 1fr;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 25px;
+    grid-gap: 45px;
     margin: 0;
   }
 
   .project-list__item {
-    background-color: rgba(211, 211, 211, 0.2);
-    border-radius: 10px;
-    -webkit-box-shadow: 2px 5px 5px 2px rgba(0, 0, 0, 0.1);
-            box-shadow: 2px 5px 5px 2px rgba(0, 0, 0, 0.1);
+    background-color: rgba(168, 152, 152, 0.15);
+    border-radius: 15px;
+    -webkit-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
     width: auto;
     min-height: auto;
     margin: 0;
   }
 }
 
+
 /* Contact Page */
-.contact {
-  margin: 0 auto;
-  max-width: 50%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.contact__information {
-  margin: 30px auto;
-}
-
-#contact-form {
+#contact {
+  height: 60vh;
+  max-width: 80%;
+  margin: 10vh auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  background-color: rgba(168, 152, 152, 0.09);
+  border-radius: 15px;
+  -webkit-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  padding: 25px;
 }
 
-.error-message {
-  color: red;
+.contact {
+  margin: 0 auto;
+  max-width: 80%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-#contact-email,
-#contact-tel,
-#contact-message {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 100px;
-          flex: 0 1 100px;
+.contact h1 {
+  padding-bottom: 10px;
 }
 
-#submit-message {
-  -webkit-box-flex: 0;
-      -ms-flex-positive: 0;
-          flex-grow: 0;
-  -ms-flex-negative: 1;
-      flex-shrink: 1;
-  max-width: 20%;
-  margin: 15px 0;
+.contact__information {
+  margin: 20px 30px;
+  display: block;
+}
+
+.contact__animation {
+  margin: 20px 40px;
+  display: block;
 }
 
 /* Footer */
@@ -467,26 +445,49 @@ button:active {
   .profile__portrait {
     margin-bottom: 25px;
   }
-
-  .project-list {
-    -ms-grid-columns: 1fr;
-    grid-template-columns: 1fr;
-  }
-}
-
-@media all and (min-width: 500px) and (max-width: 750px) {
-  .project-list {
-    -ms-grid-columns: 1fr 25px 1fr;
-    grid-template-columns: 1fr 1fr;
-  }
 }
 
 @media all and (max-width: 750px) {
   .project-list {
     grid-gap: 15px;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
   }
 
   h1 {
     font-size: 22px;
+  }
+
+  .contact__animation {
+    display: none;
+  }
+}
+
+@media all and (min-width: 750px) and (max-width: 1300px) {
+  .project-list {
+    -ms-grid-columns: 1fr 15px 1fr;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media all and (max-width: 1300px) {
+  .profile {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .profile__portrait {
+    margin-right: 0;
+    width: 100%;
+    max-width: 700px;
+  }
+
+  .profile__text {
+    -webkit-box-flex: 1;
+        -ms-flex: auto;
+            flex: auto;
   }
 }
