--- a/css/styles.css
+++ b/css/styles.css
@@ -336,9 +336,24 @@ button:active,
 }
 
 .contact__animation {
-  margin: 20px 40px;
+  margin: 40px 60px;
   display: block;
+
 }
+
+/* SVG animation */
+svg:hover {
+  animation: shake 0.3s infinite;
+}
+
+@keyframes shake {
+  0% { transform: rotate(0deg); }
+  25% { transform: rotate(5deg); }
+  50% { transform: rotate(0eg); }
+  75% { transform: rotate(-5deg); }
+  100% { transform: rotate(0deg); }
+}
+
 
 /* Footer */
 .page-footer {
