--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,7 @@ button,
 
   /* takes the font from the outer container */
   font-family: inherit;
+  font-weight: var(--font-weight-bold);
 
   /*styling*/
   letter-spacing: 1px;
@@ -279,6 +280,29 @@ button:active,
 }
 
 .project-list__item .button {
+  margin-right: 20px;
+  margin-bottom: 20px;
+  float: right;
+}
+
+.modal {
+  width: 33%;
+  padding: 15px;
+  background-color: rgba(255, 255, 255, 0.75);
+  border-radius: 15px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  border: none;
+}
+
+.modal img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.modal .button{
   margin-right: 20px;
   margin-bottom: 20px;
   float: right;
