--- a/css/styles.css
+++ b/css/styles.css
@@ -285,8 +285,8 @@ button:active,
 }
 
 .modal {
-  width: 33%;
-  padding: 15px;
+  width: 60%;
+  padding: 15px 6%;
   background-color: rgba(255, 255, 255, 0.75);
   border-radius: 15px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -296,9 +296,14 @@ button:active,
 
 .modal img {
   width: 100%;
-  height: 300px;
-  object-fit: cover;
   border-radius: 5px;
+}
+
+.modal img:hover,
+.modal img:focus {
+  cursor: default;
+  opacity: 1;
+  box-shadow: none;
 }
 
 .close-modal {
@@ -444,6 +449,10 @@ svg:hover {
 
   .profile__portrait {
     margin-bottom: 25px;
+  }
+
+  .modal {
+    width: 85%;
   }
 }
 
