Add developer toolbelt

--- a/css/styles.css
+++ b/css/styles.css
@@ -259,6 +259,27 @@ button:active,
   padding: 15px;
 }
 
+/* end grid fallback */
+
+@supports (display: grid) {
+  .project-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 50px;
+    margin: 0;
+  }
+
+  .project-list__item {
+    background-color: rgba(168, 152, 152, 0.15);
+    border-radius: 15px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    width: auto;
+    min-height: auto;
+    margin: 0;
+  }
+}
+
 .project-list__item img{
   width: 100%;
   transition: opacity 0.5s;
@@ -331,25 +352,55 @@ button:active,
   opacity: 1;
 }
 
-/* end grid fallback */
-
-@supports (display: grid) {
-  .project-list {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 50px;
-    margin: 0;
+/* Toolbelt */
+@keyframes toolbelt {
+  from {
+    transform: translateX(0);
   }
-
-  .project-list__item {
-    background-color: rgba(168, 152, 152, 0.15);
-    border-radius: 15px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(10px);
-    width: auto;
-    min-height: auto;
-    margin: 0;
+  to {
+    transform: translateX(-100%);
   }
+}
+.toolbelt {
+  margin:  20vh auto;
+  overflow: hidden;
+  white-space: nowrap;
+  position: relative;
+}
+
+.toolbelt:before,
+.toolbelt:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  width: 250px;
+  height: 100%;
+  z-index: 2;
+}
+
+.toolbelt:before {
+  left: 0;
+  background: linear-gradient(to left, rgba(255, 255, 255, 0), #ffffff);
+}
+
+.toolbelt:after {
+  right: 0;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), #ffffff);
+}
+
+.toolbelt:hover .toolbelt__logos {
+  animation-play-state: paused;
+}
+
+.toolbelt__logos {
+  display: inline-block;
+  padding: 30px 0;
+  animation: 25s toolbelt infinite linear;
+}
+
+.toolbelt__logos img {
+  height: 60px;
+  margin: 0 30px;
 }
 
 
