--- a/css/style.production.css
+++ b/css/style.production.css
@@ -7,8 +7,7 @@
 /*
 Colors
 primary-color (green): #4c764c
-secondary-color (orange): #d67d00
-text-color (greenish black): #0a0c08
+secondary-color (orange): #ffa424
 */
 
 * {
@@ -22,7 +21,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   font-size: 16px;
-  color: #0a0c08;
+  color: #000;
   line-height: 1.6;
   min-height: 100vh;
 }
@@ -78,7 +77,24 @@ a:active {
 }
 
 /* button styling */
-button,
+button {
+  /* overwrite browser defaults and resets the border */
+  border: none;
+  display: inline-block;
+  color: #000;
+
+  /* takes the font from the outer container */
+  font-family: inherit;
+  font-weight: 700;
+
+  /*styling*/
+  letter-spacing: 1px;
+  padding: 13px 50px 13px;
+  outline: 0;
+  border: 1px solid #000;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+}
 .button {
   /* overwrite browser defaults and resets the border */
   border: none;
@@ -87,6 +103,7 @@ button,
 
   /* takes the font from the outer container */
   font-family: inherit;
+  font-weight: 700;
 
   /*styling*/
   letter-spacing: 1px;
@@ -168,8 +185,7 @@ button:active,
 
 /* Tag styling */
 .tags {
-  margin-bottom: 15px;
-  min-height: 100px;
+  margin: 30px 5px;
 }
 
 .tag {
@@ -194,7 +210,7 @@ button:active,
 .header-container {
   position: sticky;
   top: 0;
-  z-index: 2;
+  z-index: 3;
 }
 
 .page-header {
@@ -312,6 +328,31 @@ button:active,
   padding: 15px;
 }
 
+/* end grid fallback */
+
+@supports (display: grid) {
+  .project-list {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 50px 1fr 50px 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 50px;
+    margin: 0;
+  }
+
+  .project-list__item {
+    background-color: rgba(168, 152, 152, 0.15);
+    border-radius: 15px;
+    -webkit-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
+    width: auto;
+    min-height: auto;
+    margin: 0;
+  }
+}
+
 .project-list__item img{
   width: 100%;
   -webkit-transition: opacity 0.5s;
@@ -336,7 +377,7 @@ button:active,
 }
 
 .project-list__item p {
-  min-height: 100px;
+  min-height: 120px;
 }
 
 .project-list__item .button {
@@ -345,29 +386,134 @@ button:active,
   float: right;
 }
 
-/* end grid fallback */
+.modal {
+  width: 50%;
+  padding: 15px 6%;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 15px;
+  -webkit-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  border: none;
+  outline: none;
+}
 
-@supports (display: grid) {
-  .project-list {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr 45px 1fr 45px 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 45px;
-    margin: 0;
-  }
+.modal p {
+  min-height: 50px;
+}
 
-  .project-list__item {
-    background-color: rgba(168, 152, 152, 0.15);
-    border-radius: 15px;
-    -webkit-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    -webkit-backdrop-filter: blur(10px);
-            backdrop-filter: blur(10px);
-    width: auto;
-    min-height: auto;
-    margin: 0;
+.modal h3 {
+  margin-top: 45px;
+}
+
+.close-modal {
+  margin-right: 20px;
+  margin-bottom: 20px;
+  float: right;
+}
+
+.close-modal img {
+  border-radius: 50%;
+  -webkit-transition: -webkit-box-shadow 0.5s;
+  transition: -webkit-box-shadow 0.5s;
+  -o-transition: box-shadow 0.5s;
+  transition: box-shadow 0.5s;
+  transition: box-shadow 0.5s, -webkit-box-shadow 0.5s;
+  -webkit-transition-timing-function: ease-in-out;
+       -o-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
+  padding: 1px;
+}
+
+.close-modal img:hover,
+.close-modal img:focus {
+  border-radius: 50%;
+  cursor: pointer;
+  -webkit-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+          box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+.open-modal {
+  margin-right: 20px;
+  margin-bottom: 20px;
+  float: right;
+}
+
+.open-modal img,
+.open-modal img:hover,
+.open-modal img:focus {
+  border-radius: 50%;
+  opacity: 1;
+}
+
+/* Toolbelt */
+@-webkit-keyframes toolbelt {
+  from {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
   }
+  to {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+}
+@keyframes toolbelt {
+  from {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  to {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+}
+.toolbelt {
+  margin:  20vh auto;
+  overflow: hidden;
+  white-space: nowrap;
+  position: relative;
+}
+
+.toolbelt:before,
+.toolbelt:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  width: 250px;
+  height: 100%;
+  z-index: 2;
+}
+
+.toolbelt:before {
+  left: 0;
+  background: -webkit-gradient(linear, right top, left top, from(rgba(255, 255, 255, 0)), to(#ffffff));
+  background: -o-linear-gradient(right, rgba(255, 255, 255, 0), #ffffff);
+  background: linear-gradient(to left, rgba(255, 255, 255, 0), #ffffff);
+}
+
+.toolbelt:after {
+  right: 0;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), to(#ffffff));
+  background: -o-linear-gradient(left, rgba(255, 255, 255, 0), #ffffff);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), #ffffff);
+}
+
+.toolbelt:hover .toolbelt__logos {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+
+.toolbelt__logos {
+  display: inline-block;
+  padding: 30px 0;
+  -webkit-animation: 25s toolbelt infinite linear;
+          animation: 25s toolbelt infinite linear;
+}
+
+.toolbelt__logos img {
+  height: 60px;
+  margin: 0 30px;
 }
 
 
@@ -460,6 +606,17 @@ svg:hover {
   padding: 0 5px;
 }
 
+.impressum {
+  color: #000;
+  font-weight: 400;
+  margin-top: 5px;
+  margin-bottom: 2px;
+}
+
+.impressum:hover {
+  text-decoration: none;
+}
+
 /* Media queries */
 @media all and (max-width: 500px) {
   ul {
@@ -497,6 +654,10 @@ svg:hover {
 
   h1 {
     font-size: 22px;
+  }
+
+  .modal {
+    width: 85%;
   }
 
   .contact__animation {
